<resources>
    <string name="app_name">League Buddy</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="settings">Settings</string>
    <string name="email">Email: </string>
    <string name="emailAddress">Insert Email Address</string>
    <string name="password">Password: </string>
    <string name="signInQuestion">Sign in?</string>
    <string name="no">No</string>
    <string name="Yes">Yes</string>
    <string name="Cancel">Cancel</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="auth_failed">Authentication Failed</string>
    <string name="loggedinMessage">Logged in as:</string>
    <string name="registeredMessage">Registered as:</string>
    <string name="loginFailedString">Login Failed</string>
    <string name="regionText">Region: </string>
    <string name="enterSummoner">Enter summoner name</string>
    <string-array name="regions">
        <item name="DEFAULT">Region</item>
        <item name="OCE">OCE</item>
        <item name="RU">RU</item>
        <item name="KR">KR</item>
        <item name="BR">BR</item>
        <item name="JP">JP</item>
        <item name="NA">NA</item>
        <item name="EUN">EUN</item>
        <item name="EUW">EUW</item>
        <item name="TR">TR</item>
        <item name="EUW">EUW</item>
    </string-array>
    <string name="title_activity_settings">SettingsActivity</string>
    <string name="summonerNameString">Username:</string>
    <string name="soloQueueTableTitle">SOLO QUEUE STATS</string>
    <string name="winsStr">Wins</string>
    <string name="lossesStr">Losses</string>
    <string name="winrateStr">Win Rate</string>
    <string name="tierNameString">Tier Name:</string>
    <string name="lastOnlineString">Last Online:</string>
    <string name="daysAgoString">Days ago</string>
    <string name="Yesterday">dayAgoString</string>
    <string name="dayAgoString">Yesterday</string>
    <string name="todayString">Today</string>
    <string name="masteryLevelString">Mastery Level:</string>
    <string name="pointsString">Points:</string>
    <string name="rankIconDescription">Imageview displays the division icon of the user corresponding to their tier name</string>
    <string name="profileImageViewDescription">Displays the profile picture of the user based off of their summoner ID</string>

    <string name="levelString">Level:</string>
    <string name="searchForSummoner">Search for Summoner</string>
    <string name="emptyFieldsString">Please Enter All Fields</string>
    <string name="searchString">Search</string>
    <string name="history">History</string>
    <string name="match_history">Match History</string>
    <string name="percentString">%</string>
    <string name="selectRegionString">SELECT A REGION</string>
    <string name="accountIdErrorString">Failed to retrieve data, please refresh homepage and try again</string>
    <string name="gameDateString">Game date:</string>
    <string name="showingLastXGamesString">Showing the last 20 games</string>
    <string name="string_update">Update</string>
    <string name="logOutString">Log Out</string>
    <string name="deleteString">Delete Account</string>
    <string name="homeClickString">This is the home page!</string>
    <string name="botLaneString">BOTTOM</string>
    <string name="testString">Jinx</string>
    <string name="summonersRiftString">Summoner\'s Rift</string>
    <string name="_5v5_ranked_queue">5v5 Ranked Queue</string>
    <string name="botLaneString1">Bot Lane</string>
    <string name="midLaneString">Mid Lane</string>
    <string name="jungleString">Jungle</string>
    <string name="topLaneString">Top lane</string>
    <string name="supportString">Support</string>
    <string name="championIconDescription">Image of a champion is displayed in this ImageView</string>
    <string name="laneImageViewDescription">Image of the lane played will display here</string>
    <string name="matchChampionIconTVDescription">Image of championn played will be displayed here</string>
    <string name="summonerNameTestString">Counterlogic</string>
    <string name="summonerLevelTestString">Level: 30</string>
    <string name="arrowImageViewDescription">Temporary icon used for future functionality</string>
    <string name="summonerIconDescription">Summoner icon of this user will be displayed in this ImageView</string>
    <string name="registrationFailedString">Registration Failed</string>
    <string name="attemptingLoginString">Attempting login</string>
    <string name="attemptingRegistrationString">Attempting registration</string>
</resources>
