<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/freljord_tower_wallpaper_blurred"
    tools:context="com.mad.leaguebuddy.Activities.LoginActivity">

    <LinearLayout
        android:id="@+id/LogoLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10sp"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="wrap_content"
            android:layout_height="100sp"
            android:layout_gravity="center"
            android:src="@drawable/league_of_legends_logo_transparent" />
    </LinearLayout>


    <LinearLayout
        android:id="@+id/FormLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_marginLeft="10sp"
        android:layout_marginRight="10sp"
        android:orientation="vertical">


        <HorizontalScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5sp"
            android:layout_marginRight="5sp"
            android:background="@drawable/bordered_background">

            <TableLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:stretchColumns="1">

                <TableRow>

                    <TextView
                        android:text="@string/email"
                        android:textColor="@color/whiteText"
                        android:textStyle="bold" />

                    <EditText
                        android:id="@+id/emailEditText"
                        android:backgroundTint="@color/whiteText"
                        android:inputType="textEmailAddress"
                        android:textColor="@color/buttonColor" />
                </TableRow>

                <TableRow>

                    <TextView
                        android:text="@string/password"
                        android:textColor="@color/whiteText"
                        android:textStyle="bold" />

                    <EditText
                        android:id="@+id/passwordEditText"
                        android:backgroundTint="@color/whiteText"
                        android:inputType="textPassword"
                        android:textColor="@color/buttonColor" />
                </TableRow>

                <TableRow android:id="@+id/summonerTablerow">

                    <TextView
                        android:id="@+id/summonerName"
                        android:text="@string/summonerNameString"
                        android:textColor="@color/whiteText"
                        android:textStyle="bold" />

                    <EditText
                        android:id="@+id/summonerEditText"
                        android:backgroundTint="@color/whiteText"
                        android:inputType="text"
                        android:textColor="@color/buttonColor" />

                    <com.jaredrummler.materialspinner.MaterialSpinner
                        android:id="@+id/regionSpinner"
                        app:ms_background_color="@color/whiteText" />
                </TableRow>

                <LinearLayout>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginRight="10sp"
                        android:text="@string/signInQuestion"
                        android:textColor="@color/whiteText"
                        android:textStyle="bold" />

                    <Switch
                        android:id="@+id/ToggleButton"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:backgroundTint="@color/authenticateColor"
                        android:showText="false"
                        android:switchTextAppearance="@style/SwitchTextAppearance"
                        android:textColor="@color/whiteText"
                        android:textOff="@string/register"
                        android:textOn="@string/login" />
                </LinearLayout>

            </TableLayout>
        </HorizontalScrollView>
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/FormLayout"
        android:layout_centerHorizontal="true"
        android:gravity="center"
        android:orientation="horizontal">

        <Button
            android:id="@+id/AuthenticateButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/authenticateColor"
            android:text="@string/register"
            android:textColor="@color/buttonColor" />

        <Button
            android:id="@+id/CancelButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/redCancel"
            android:text="@string/Cancel"
            android:textColor="@color/buttonColor"
            android:textStyle="bold" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="20sp"
        android:gravity="center">


        <!--<ProgressBar-->
        <!--android:id="@+id/loginProgressBar"-->
        <!--android:layout_width="wrap_content"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:visibility="gone" />-->
    </LinearLayout>

</RelativeLayout>
